Fixed minor alignment issue with search buttons

--- a/style.css
+++ b/style.css
@@ -107,6 +107,11 @@ ul{
     border-radius: 3px;
 }
 
-
+#search{
+    padding: 12px 12px 0px 0px;
+}
+#lucky{
+    padding: 12px 0px 0px 12px;
+}
     
    
